name:                rogueDebug
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/andrevdm/haskellRogueLike
license:             BSD3
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          andre@andrevdm.com
copyright:           2018 Andre Van Der Merwe
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude -Wcompat -Wredundant-constraints
  hs-source-dirs:      src
  exposed-modules:     GameEngine
                     , GameCore
                     , GameHost
                     , Data.Aeson.Text.Extended
                     , Entities
                     , EntityType
                     , BoundedInt
                     , UtilityBrain
                     , Memory
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , aeson
                     , bytestring
                     , bzlib
                     , containers
                     , lens
                     , safe-exceptions
                     , scotty
                     , stm
                     , text
                     , wai
                     , wai-extra
                     , wai-websockets
                     , warp
                     , websockets
                     , ilist
                     , random
                     , dlist
                     , mtl
                     , transformers
  default-language:    Haskell2010

executable rogueDebug-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude -Wcompat -Wredundant-constraints
  build-depends:       base
                     , rogueDebug
                     , protolude
  default-language:    Haskell2010


test-suite rogueDebug-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rogueDebug
                     , protolude
                     , hspec
                     , QuickCheck
                     , text
                     , containers
                     , bifunctors
                     , lens
                     , bytestring
                     , random
                     , dlist
                     , mtl
                     , transformers
  other-modules:       GameSpec
                     , MemorySpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/andrevdm/haskellRogueLike
